--- a/WebGentleCourse/Views/Shared/_Layout.cshtml
+++ b/WebGentleCourse/Views/Shared/_Layout.cshtml
@@ -9,25 +9,36 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebGentleCourse</a>
+                <a class="navbar-brand">Book Store</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark"  href="/home/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"  href="/home/contactus">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"  href="/book/getallbooks">All Books</a>
                         </li>
                     </ul>
+                     <ul class="navbar-nav ml-auto">
+                         <li class="nav-item">
+                            <a class="btn btn-outline-primary">Login</a>
+                            <a class="btn btn-primary">Register</a>
+                         </li>
+                     </ul>
                 </div>
-            </div>
-        </nav>
+            </nav>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -35,9 +46,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted text-center">
         <div class="container">
-            &copy; 2022 - WebGentleCourse - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+           Copyright &copy; Book Store @DateTime.Now.Year</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
