--- a/WebGentleCourse/Views/Home/Index.cshtml
+++ b/WebGentleCourse/Views/Home/Index.cshtml
@@ -61,3 +61,13 @@
         </div>
     </div>
 </div>
+
+@section Scripts{
+
+    <script>
+    $(document).ready(function () {
+        //alert("document is ready");
+    })
+</script>
+}
+
