--- a/WebGentleCourse/Views/Book/GetAllBooks.cshtml
+++ b/WebGentleCourse/Views/Book/GetAllBooks.cshtml
@@ -11,14 +11,14 @@
         @foreach (var book in Model)
         {
          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm">
+            <div class="card mb-4 shadow-sm" style="height: 400px">
                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"></svg>
                  <div class="card-body">
                      <h3 class="card-title">@book.Title</h3>
                     <p class="card-text">@book.Description</p>
                      <div class="d-flex justify-content-between align-align-items-center">
                         <div class="btn-group">
-                          <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                          <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
                         </div>
                      <small class="text-muted">@book.Author</small>
                  </div>
