--- a/WebGentleCourse/Views/Book/GetAllBooks.cshtml
+++ b/WebGentleCourse/Views/Book/GetAllBooks.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<BookModel>
+﻿@{
+    ViewData["Title"] = "All Books";
+}
+
+@model IEnumerable<BookModel>
 
 @{
     Layout = "_Layout";
@@ -18,7 +22,7 @@
                     <p class="card-text">@book.Description</p>
                      <div class="d-flex justify-content-between align-align-items-center">
                         <div class="btn-group">
-                          <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
+                          <a asp-controller="book" asp-action="getbook" asp-route-id="@book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
                         </div>
                      <small class="text-muted">@book.Author</small>
                  </div>
