--- a/WebGentleCourse/Views/Shared/_Layout.cshtml
+++ b/WebGentleCourse/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark"  asp-controller="Book" asp-action="GetAllBooks">All Books</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"  asp-controller="Book" asp-action="AddNewBook">Add Book</a>
+                        </li>
                     </ul>
                      <ul class="navbar-nav ml-auto">
                          <li class="nav-item">
