--- a/WebGentleCourse/Views/Book/AddNewBook.cshtml
+++ b/WebGentleCourse/Views/Book/AddNewBook.cshtml
@@ -1,5 +1,10 @@
 ﻿@model BookModel
 
+@{
+    ViewData["Title"] = "Add new book";
+}
+
+
 <h3 class="display-4">Add a new book</h3>
 <div class="container">
     <form method="post">
@@ -10,6 +15,10 @@
         <div class="form-group">
              <label asp-for="Author"></label>
             <input asp-for="Author" class="form-control"/>
+         </div>
+         <div class="form-group">
+             <label asp-for="TotalPages"></label>
+            <input asp-for="TotalPages" class="form-control"/>
          </div>
         <div class="form-group">
              <label asp-for="Description"></label>
