--- a/WebGentleCourse/Views/Book/AddNewBook.cshtml
+++ b/WebGentleCourse/Views/Book/AddNewBook.cshtml
@@ -6,6 +6,17 @@
 
 
 <h3 class="display-4">Add a new book</h3>
+<hr />
+@if (ViewBag.IsSuccess)
+{
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  Book was added to the datebase. Click <a asp-controller="Book" asp-action ="GetBook" asp-route-id="@ViewBag.BookId" >here</a> to get more details.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+}
+
 <div class="container">
     <form method="post">
         <div class="form-group">
