--- a/WebGentleCourse/Views/Book/GetBook.cshtml
+++ b/WebGentleCourse/Views/Book/GetBook.cshtml
@@ -7,6 +7,8 @@
 <div class="container">
     <h3 class="display-4">Book details</h3>
     <div class="row">
+        <div>
+        </div>
         <div class="col-md-6">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -16,23 +18,23 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img width="500" height="400" src="/images/books/books1.jpg" class="d-block w-100" alt="...">
+                        <img class="d-block w-100" src="/images/books/books1.jpg" height="375" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img width="500" height="400" src="/images/books/books2.jpg" class="d-block w-100" alt="...">
+                        <img class="d-block w-100" src="/images/books/books2.jpg" height="375" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img width="500" height="400" src="/images/books/books3.jpg" class="d-block w-100" alt="...">
+                        <img class="d-block w-100" src="/images/books/books3.jpg" height="375" alt="Third slide">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
-                </button>
+                </a>
             </div>
         </div>
         <div class="col-md-6">
@@ -79,22 +81,22 @@
             @for (int i = 0; i < 5; i++)
             {
                 <div class="col-md-4">
-                <div class="card mb-4 shadow-sm" style="height: 400px">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"></svg>
-                    <div class="card-body">
-                        <h3 class="card-title"></h3>
-                        <p class="card-text">book.Description</p>
-                        <div class="d-flex justify-content-between align-align-items-center">
-                            <div class="btn-group">
-                                <a href="/book/getbook/book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
+                    <div class="card mb-4 shadow-sm" style="height: 400px">
+                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"></svg>
+                        <div class="card-body">
+                            <h3 class="card-title"></h3>
+                            <p class="card-text">book.Description</p>
+                            <div class="d-flex justify-content-between align-align-items-center">
+                                <div class="btn-group">
+                                    <a href="/book/getbook/book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
+                                </div>
+                                <small class="text-muted">book.Author</small>
                             </div>
-                            <small class="text-muted">book.Author</small>
                         </div>
                     </div>
                 </div>
-            </div>
             }
-         
+
         </div>
     </div>
 </div>
