--- a/WebGentleCourse/Views/Book/AddNewBook.cshtml
+++ b/WebGentleCourse/Views/Book/AddNewBook.cshtml
@@ -7,7 +7,7 @@
 
 <h3 class="display-4">Add a new book</h3>
 <hr />
-@if (ViewBag.IsSuccess)
+@if (ViewBag.IsSuccess == true)
 {
 <div class="alert alert-success alert-dismissible fade show" role="alert">
   Book was added to the datebase. Click <a asp-controller="Book" asp-action ="GetBook" asp-route-id="@ViewBag.BookId" >here</a> to get more details.
@@ -18,22 +18,35 @@
 }
 
 <div class="container">
-    <form method="post">
+    <form method="post" asp-action="AddNewBook" asp-controller="Book">
+        <div asp-validation-summary="None" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Title"></label>
             <input asp-for="Title" class="form-control"/>
+            <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="form-group">
              <label asp-for="Author"></label>
             <input asp-for="Author" class="form-control"/>
+            <span asp-validation-for="Author" class="text-danger"></span>
          </div>
          <div class="form-group">
              <label asp-for="TotalPages"></label>
             <input asp-for="TotalPages" class="form-control"/>
+            <span asp-validation-for="TotalPages" class="text-danger"></span>
          </div>
+         <div class="form-group">
+            <label asp-for="Language"></label>
+            <select asp-for="Language" class="form-control" asp-items="new SelectList(ViewBag.Language)">
+                <option value="">-- Please choose your language --</option>
+            </select>
+                
+            <span asp-validation-for="Language" class="text-danger"></span>
+        </div>
         <div class="form-group">
              <label asp-for="Description"></label>
              <textarea class="form-control" asp-for="Description"></textarea>
+             <span asp-validation-for="Description" class="text-danger"></span>
          </div>
          <div class="form-group">
              <input type="submit" value="Add Book" class="btn btn-primary" />
