--- a/WebGentleCourse/Views/Book/AddNewBook.cshtml
+++ b/WebGentleCourse/Views/Book/AddNewBook.cshtml
@@ -1,4 +1,5 @@
-﻿@model BookModel
+﻿@using WebGentleCourse.Enums
+@model BookModel
 
 @{
     ViewData["Title"] = "Add new book";
@@ -37,7 +38,7 @@
          </div>
          <div class="form-group">
             <label asp-for="Language"></label>
-            <select asp-for="Language" class="form-control" asp-items="new SelectList(ViewBag.Language)">
+            <select asp-for="Language" class="form-control" asp-items="Html.GetEnumSelectList<LanguageEnum>()">
                 <option value="">-- Please choose your language --</option>
             </select>
                 
