--- a/WebGentleCourse/Views/Book/AddNewBook.cshtml
+++ b/WebGentleCourse/Views/Book/AddNewBook.cshtml
@@ -37,12 +37,12 @@
             <span asp-validation-for="TotalPages" class="text-danger"></span>
          </div>
          <div class="form-group">
-            <label asp-for="Language"></label>
-            <select asp-for="Language" class="form-control" asp-items="Html.GetEnumSelectList<LanguageEnum>()">
+            <label asp-for="LanguageId"></label>
+            <select asp-for="LanguageId" class="form-control" asp-items="Html.GetEnumSelectList<LanguageEnum>()">
                 <option value="">-- Please choose your language --</option>
             </select>
                 
-            <span asp-validation-for="Language" class="text-danger"></span>
+            <span asp-validation-for="LanguageId" class="text-danger"></span>
         </div>
         <div class="form-group">
              <label asp-for="Description"></label>
